<?xml version="1.0" encoding="utf-8"?>
<!-- @author Sara Dalvig -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/mint"
    tools:background="@color/mint"
    tools:context=".StartFragment"
    android:focusable="true" >

    <TextView
        android:id="@+id/tvGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        android:text="@string/app_name"
        android:textColor="@color/darkPurple"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:fontFamily="@font/baloo"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:text="@string/new_game"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="187dp" />

    <Button
        android:id="@+id/btnNewPlayer"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:text="@string/set_name"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="311dp" />

    <Button
        android:id="@+id/btnHighScore"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:text="@string/highscore"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="366dp" />


</LinearLayout>